numbler/server/parser.out


Unused terminals:

   POINT

Grammar

Rule 1     expression -> expression PLUS expression
Rule 2     expression -> expression MINUS expression
Rule 3     expression -> expression TIMES expression
Rule 4     expression -> expression DIVIDE expression
Rule 5     expression -> expression EXP expression
Rule 6     expression -> expression LE expression
Rule 7     expression -> expression LT expression
Rule 8     expression -> expression GE expression
Rule 9     expression -> expression GT expression
Rule 10    expression -> expression EQ expression
Rule 11    expression -> expression NEQ expression
Rule 12    expression -> expression CONCAT expression
Rule 13    expression -> cell
Rule 14    expression -> function
Rule 15    expression -> ifFunction
Rule 16    expression -> STRING
Rule 17    expression -> ERR
Rule 18    expression -> MINUS expression
Rule 19    expression -> PLUS expression
Rule 20    expression -> TRUE
Rule 21    expression -> FALSE
Rule 22    expression -> INTEGER
Rule 23    expression -> FLOAT
Rule 24    expression -> LPAREN expression RPAREN
Rule 25    ifFunction -> IF LPAREN expression COMMA expression COMMA expression RPAREN
Rule 26    ifFunction -> IF LPAREN expression COMMA expression COMMA RPAREN
Rule 27    ifFunction -> IF LPAREN expression COMMA expression RPAREN
Rule 28    function -> FUNC LPAREN arglist RPAREN
Rule 29    function -> FUNC LPAREN RPAREN
Rule 30    arglist -> arg
Rule 31    arglist -> arglist COMMA arg
Rule 32    arg -> expression
Rule 33    arg -> areareference
Rule 34    areareference -> range
Rule 35    areareference -> vector
Rule 36    vector -> colrange
Rule 37    vector -> rowrange
Rule 38    range -> cell RANGEOP cell
Rule 39    colrange -> column RANGEOP column
Rule 40    rowrange -> INTEGER RANGEOP INTEGER
Rule 41    rowrange -> absrow RANGEOP INTEGER
Rule 42    rowrange -> INTEGER RANGEOP absrow
Rule 43    rowrange -> absrow RANGEOP absrow
Rule 44    cell -> column row
Rule 45    cell -> SHEETNAME column row
Rule 46    column -> COLUMN
Rule 47    column -> ABSREF COLUMN
Rule 48    absrow -> ABSREF INTEGER
Rule 49    row -> INTEGER
Rule 50    row -> ABSREF INTEGER

Terminals, with rules where they appear

ABSREF               : 47 48 50
COLUMN               : 46 47
COMMA                : 25 25 26 26 27 31
CONCAT               : 12
DIVIDE               : 4
EQ                   : 10
ERR                  : 17
EXP                  : 5
FALSE                : 21
FLOAT                : 23
FUNC                 : 28 29
GE                   : 8
GT                   : 9
IF                   : 25 26 27
INTEGER              : 22 40 40 41 42 48 49 50
LE                   : 6
LPAREN               : 24 25 26 27 28 29
LT                   : 7
MINUS                : 2 18
NEQ                  : 11
PLUS                 : 1 19
POINT                : 
RANGEOP              : 38 39 40 41 42 43
RPAREN               : 24 25 26 27 28 29
SHEETNAME            : 45
STRING               : 16
TIMES                : 3
TRUE                 : 20
error                : 

Nonterminals, with rules where they appear

absrow               : 41 42 43 43
areareference        : 33
arg                  : 30 31
arglist              : 28 31
cell                 : 13 38 38
colrange             : 36
column               : 39 39 44 45
expression           : 1 1 2 2 3 3 4 4 5 5 6 6 7 7 8 8 9 9 10 10 11 11 12 12 18 19 24 25 25 25 26 26 27 27 32 0
function             : 14
ifFunction           : 15
range                : 34
row                  : 44 45
rowrange             : 37
vector               : 35


Parsing method: SLR


state 0

    (0) S' -> . expression
    (1) expression -> . expression PLUS expression
    (2) expression -> . expression MINUS expression
    (3) expression -> . expression TIMES expression
    (4) expression -> . expression DIVIDE expression
    (5) expression -> . expression EXP expression
    (6) expression -> . expression LE expression
    (7) expression -> . expression LT expression
    (8) expression -> . expression GE expression
    (9) expression -> . expression GT expression
    (10) expression -> . expression EQ expression
    (11) expression -> . expression NEQ expression
    (12) expression -> . expression CONCAT expression
    (13) expression -> . cell
    (14) expression -> . function
    (15) expression -> . ifFunction
    (16) expression -> . STRING
    (17) expression -> . ERR
    (18) expression -> . MINUS expression
    (19) expression -> . PLUS expression
    (20) expression -> . TRUE
    (21) expression -> . FALSE
    (22) expression -> . INTEGER
    (23) expression -> . FLOAT
    (24) expression -> . LPAREN expression RPAREN
    (44) cell -> . column row
    (45) cell -> . SHEETNAME column row
    (28) function -> . FUNC LPAREN arglist RPAREN
    (29) function -> . FUNC LPAREN RPAREN
    (25) ifFunction -> . IF LPAREN expression COMMA expression COMMA expression RPAREN
    (26) ifFunction -> . IF LPAREN expression COMMA expression COMMA RPAREN
    (27) ifFunction -> . IF LPAREN expression COMMA expression RPAREN
    (46) column -> . COLUMN
    (47) column -> . ABSREF COLUMN

    STRING          shift and go to state 5
    ERR             shift and go to state 2
    MINUS           shift and go to state 4
    PLUS            shift and go to state 8
    TRUE            shift and go to state 3
    FALSE           shift and go to state 13
    INTEGER         shift and go to state 9
    FLOAT           shift and go to state 17
    LPAREN          shift and go to state 11
    SHEETNAME       shift and go to state 18
    FUNC            shift and go to state 1
    IF              shift and go to state 12
    COLUMN          shift and go to state 6
    ABSREF          shift and go to state 16


    function                       shift and go to state 10
    ifFunction                     shift and go to state 14
    column                         shift and go to state 15
    cell                           shift and go to state 7
    expression                     shift and go to state 19

state 1

    (28) function -> FUNC . LPAREN arglist RPAREN
    (29) function -> FUNC . LPAREN RPAREN

    LPAREN          shift and go to state 20



state 2

    (17) expression -> ERR .

    $               reduce using rule 17 (expression -> ERR .)
    PLUS            reduce using rule 17 (expression -> ERR .)
    MINUS           reduce using rule 17 (expression -> ERR .)
    TIMES           reduce using rule 17 (expression -> ERR .)
    DIVIDE          reduce using rule 17 (expression -> ERR .)
    EXP             reduce using rule 17 (expression -> ERR .)
    LE              reduce using rule 17 (expression -> ERR .)
    LT              reduce using rule 17 (expression -> ERR .)
    GE              reduce using rule 17 (expression -> ERR .)
    GT              reduce using rule 17 (expression -> ERR .)
    EQ              reduce using rule 17 (expression -> ERR .)
    NEQ             reduce using rule 17 (expression -> ERR .)
    CONCAT          reduce using rule 17 (expression -> ERR .)
    RPAREN          reduce using rule 17 (expression -> ERR .)
    COMMA           reduce using rule 17 (expression -> ERR .)



state 3

    (20) expression -> TRUE .

    $               reduce using rule 20 (expression -> TRUE .)
    PLUS            reduce using rule 20 (expression -> TRUE .)
    MINUS           reduce using rule 20 (expression -> TRUE .)
    TIMES           reduce using rule 20 (expression -> TRUE .)
    DIVIDE          reduce using rule 20 (expression -> TRUE .)
    EXP             reduce using rule 20 (expression -> TRUE .)
    LE              reduce using rule 20 (expression -> TRUE .)
    LT              reduce using rule 20 (expression -> TRUE .)
    GE              reduce using rule 20 (expression -> TRUE .)
    GT              reduce using rule 20 (expression -> TRUE .)
    EQ              reduce using rule 20 (expression -> TRUE .)
    NEQ             reduce using rule 20 (expression -> TRUE .)
    CONCAT          reduce using rule 20 (expression -> TRUE .)
    RPAREN          reduce using rule 20 (expression -> TRUE .)
    COMMA           reduce using rule 20 (expression -> TRUE .)



state 4

    (18) expression -> MINUS . expression
    (1) expression -> . expression PLUS expression
    (2) expression -> . expression MINUS expression
    (3) expression -> . expression TIMES expression
    (4) expression -> . expression DIVIDE expression
    (5) expression -> . expression EXP expression
    (6) expression -> . expression LE expression
    (7) expression -> . expression LT expression
    (8) expression -> . expression GE expression
    (9) expression -> . expression GT expression
    (10) expression -> . expression EQ expression
    (11) expression -> . expression NEQ expression
    (12) expression -> . expression CONCAT expression
    (13) expression -> . cell
    (14) expression -> . function
    (15) expression -> . ifFunction
    (16) expression -> . STRING
    (17) expression -> . ERR
    (18) expression -> . MINUS expression
    (19) expression -> . PLUS expression
    (20) expression -> . TRUE
    (21) expression -> . FALSE
    (22) expression -> . INTEGER
    (23) expression -> . FLOAT
    (24) expression -> . LPAREN expression RPAREN
    (44) cell -> . column row
    (45) cell -> . SHEETNAME column row
    (28) function -> . FUNC LPAREN arglist RPAREN
    (29) function -> . FUNC LPAREN RPAREN
    (25) ifFunction -> . IF LPAREN expression COMMA expression COMMA expression RPAREN
    (26) ifFunction -> . IF LPAREN expression COMMA expression COMMA RPAREN
    (27) ifFunction -> . IF LPAREN expression COMMA expression RPAREN
    (46) column -> . COLUMN
    (47) column -> . ABSREF COLUMN

    STRING          shift and go to state 5
    ERR             shift and go to state 2
    MINUS           shift and go to state 4
    PLUS            shift and go to state 8
    TRUE            shift and go to state 3
    FALSE           shift and go to state 13
    INTEGER         shift and go to state 9
    FLOAT           shift and go to state 17
    LPAREN          shift and go to state 11
    SHEETNAME       shift and go to state 18
    FUNC            shift and go to state 1
    IF              shift and go to state 12
    COLUMN          shift and go to state 6
    ABSREF          shift and go to state 16


    function                       shift and go to state 10
    ifFunction                     shift and go to state 14
    column                         shift and go to state 15
    cell                           shift and go to state 7
    expression                     shift and go to state 21

state 5

    (16) expression -> STRING .

    $               reduce using rule 16 (expression -> STRING .)
    PLUS            reduce using rule 16 (expression -> STRING .)
    MINUS           reduce using rule 16 (expression -> STRING .)
    TIMES           reduce using rule 16 (expression -> STRING .)
    DIVIDE          reduce using rule 16 (expression -> STRING .)
    EXP             reduce using rule 16 (expression -> STRING .)
    LE              reduce using rule 16 (expression -> STRING .)
    LT              reduce using rule 16 (expression -> STRING .)
    GE              reduce using rule 16 (expression -> STRING .)
    GT              reduce using rule 16 (expression -> STRING .)
    EQ              reduce using rule 16 (expression -> STRING .)
    NEQ             reduce using rule 16 (expression -> STRING .)
    CONCAT          reduce using rule 16 (expression -> STRING .)
    RPAREN          reduce using rule 16 (expression -> STRING .)
    COMMA           reduce using rule 16 (expression -> STRING .)



state 6

    (46) column -> COLUMN .

    RANGEOP         reduce using rule 46 (column -> COLUMN .)
    RPAREN          reduce using rule 46 (column -> COLUMN .)
    COMMA           reduce using rule 46 (column -> COLUMN .)
    INTEGER         reduce using rule 46 (column -> COLUMN .)
    ABSREF          reduce using rule 46 (column -> COLUMN .)



state 7

    (13) expression -> cell .

    $               reduce using rule 13 (expression -> cell .)
    PLUS            reduce using rule 13 (expression -> cell .)
    MINUS           reduce using rule 13 (expression -> cell .)
    TIMES           reduce using rule 13 (expression -> cell .)
    DIVIDE          reduce using rule 13 (expression -> cell .)
    EXP             reduce using rule 13 (expression -> cell .)
    LE              reduce using rule 13 (expression -> cell .)
    LT              reduce using rule 13 (expression -> cell .)
    GE              reduce using rule 13 (expression -> cell .)
    GT              reduce using rule 13 (expression -> cell .)
    EQ              reduce using rule 13 (expression -> cell .)
    NEQ             reduce using rule 13 (expression -> cell .)
    CONCAT          reduce using rule 13 (expression -> cell .)
    RPAREN          reduce using rule 13 (expression -> cell .)
    COMMA           reduce using rule 13 (expression -> cell .)



state 8

    (19) expression -> PLUS . expression
    (1) expression -> . expression PLUS expression
    (2) expression -> . expression MINUS expression
    (3) expression -> . expression TIMES expression
    (4) expression -> . expression DIVIDE expression
    (5) expression -> . expression EXP expression
    (6) expression -> . expression LE expression
    (7) expression -> . expression LT expression
    (8) expression -> . expression GE expression
    (9) expression -> . expression GT expression
    (10) expression -> . expression EQ expression
    (11) expression -> . expression NEQ expression
    (12) expression -> . expression CONCAT expression
    (13) expression -> . cell
    (14) expression -> . function
    (15) expression -> . ifFunction
    (16) expression -> . STRING
    (17) expression -> . ERR
    (18) expression -> . MINUS expression
    (19) expression -> . PLUS expression
    (20) expression -> . TRUE
    (21) expression -> . FALSE
    (22) expression -> . INTEGER
    (23) expression -> . FLOAT
    (24) expression -> . LPAREN expression RPAREN
    (44) cell -> . column row
    (45) cell -> . SHEETNAME column row
    (28) function -> . FUNC LPAREN arglist RPAREN
    (29) function -> . FUNC LPAREN RPAREN
    (25) ifFunction -> . IF LPAREN expression COMMA expression COMMA expression RPAREN
    (26) ifFunction -> . IF LPAREN expression COMMA expression COMMA RPAREN
    (27) ifFunction -> . IF LPAREN expression COMMA expression RPAREN
    (46) column -> . COLUMN
    (47) column -> . ABSREF COLUMN

    STRING          shift and go to state 5
    ERR             shift and go to state 2
    MINUS           shift and go to state 4
    PLUS            shift and go to state 8
    TRUE            shift and go to state 3
    FALSE           shift and go to state 13
    INTEGER         shift and go to state 9
    FLOAT           shift and go to state 17
    LPAREN          shift and go to state 11
    SHEETNAME       shift and go to state 18
    FUNC            shift and go to state 1
    IF              shift and go to state 12
    COLUMN          shift and go to state 6
    ABSREF          shift and go to state 16


    function                       shift and go to state 10
    ifFunction                     shift and go to state 14
    column                         shift and go to state 15
    cell                           shift and go to state 7
    expression                     shift and go to state 22

state 9

    (22) expression -> INTEGER .

    $               reduce using rule 22 (expression -> INTEGER .)
    PLUS            reduce using rule 22 (expression -> INTEGER .)
    MINUS           reduce using rule 22 (expression -> INTEGER .)
    TIMES           reduce using rule 22 (expression -> INTEGER .)
    DIVIDE          reduce using rule 22 (expression -> INTEGER .)
    EXP             reduce using rule 22 (expression -> INTEGER .)
    LE              reduce using rule 22 (expression -> INTEGER .)
    LT              reduce using rule 22 (expression -> INTEGER .)
    GE              reduce using rule 22 (expression -> INTEGER .)
    GT              reduce using rule 22 (expression -> INTEGER .)
    EQ              reduce using rule 22 (expression -> INTEGER .)
    NEQ             reduce using rule 22 (expression -> INTEGER .)
    CONCAT          reduce using rule 22 (expression -> INTEGER .)
    RPAREN          reduce using rule 22 (expression -> INTEGER .)
    COMMA           reduce using rule 22 (expression -> INTEGER .)



state 10

    (14) expression -> function .

    $               reduce using rule 14 (expression -> function .)
    PLUS            reduce using rule 14 (expression -> function .)
    MINUS           reduce using rule 14 (expression -> function .)
    TIMES           reduce using rule 14 (expression -> function .)
    DIVIDE          reduce using rule 14 (expression -> function .)
    EXP             reduce using rule 14 (expression -> function .)
    LE              reduce using rule 14 (expression -> function .)
    LT              reduce using rule 14 (expression -> function .)
    GE              reduce using rule 14 (expression -> function .)
    GT              reduce using rule 14 (expression -> function .)
    EQ              reduce using rule 14 (expression -> function .)
    NEQ             reduce using rule 14 (expression -> function .)
    CONCAT          reduce using rule 14 (expression -> function .)
    RPAREN          reduce using rule 14 (expression -> function .)
    COMMA           reduce using rule 14 (expression -> function .)



state 11

    (24) expression -> LPAREN . expression RPAREN
    (1) expression -> . expression PLUS expression
    (2) expression -> . expression MINUS expression
    (3) expression -> . expression TIMES expression
    (4) expression -> . expression DIVIDE expression
    (5) expression -> . expression EXP expression
    (6) expression -> . expression LE expression
    (7) expression -> . expression LT expression
    (8) expression -> . expression GE expression
    (9) expression -> . expression GT expression
    (10) expression -> . expression EQ expression
    (11) expression -> . expression NEQ expression
    (12) expression -> . expression CONCAT expression
    (13) expression -> . cell
    (14) expression -> . function
    (15) expression -> . ifFunction
    (16) expression -> . STRING
    (17) expression -> . ERR
    (18) expression -> . MINUS expression
    (19) expression -> . PLUS expression
    (20) expression -> . TRUE
    (21) expression -> . FALSE
    (22) expression -> . INTEGER
    (23) expression -> . FLOAT
    (24) expression -> . LPAREN expression RPAREN
    (44) cell -> . column row
    (45) cell -> . SHEETNAME column row
    (28) function -> . FUNC LPAREN arglist RPAREN
    (29) function -> . FUNC LPAREN RPAREN
    (25) ifFunction -> . IF LPAREN expression COMMA expression COMMA expression RPAREN
    (26) ifFunction -> . IF LPAREN expression COMMA expression COMMA RPAREN
    (27) ifFunction -> . IF LPAREN expression COMMA expression RPAREN
    (46) column -> . COLUMN
    (47) column -> . ABSREF COLUMN

    STRING          shift and go to state 5
    ERR             shift and go to state 2
    MINUS           shift and go to state 4
    PLUS            shift and go to state 8
    TRUE            shift and go to state 3
    FALSE           shift and go to state 13
    INTEGER         shift and go to state 9
    FLOAT           shift and go to state 17
    LPAREN          shift and go to state 11
    SHEETNAME       shift and go to state 18
    FUNC            shift and go to state 1
    IF              shift and go to state 12
    COLUMN          shift and go to state 6
    ABSREF          shift and go to state 16


    function                       shift and go to state 10
    ifFunction                     shift and go to state 14
    column                         shift and go to state 15
    cell                           shift and go to state 7
    expression                     shift and go to state 23

state 12

    (25) ifFunction -> IF . LPAREN expression COMMA expression COMMA expression RPAREN
    (26) ifFunction -> IF . LPAREN expression COMMA expression COMMA RPAREN
    (27) ifFunction -> IF . LPAREN expression COMMA expression RPAREN

    LPAREN          shift and go to state 24



state 13

    (21) expression -> FALSE .

    $               reduce using rule 21 (expression -> FALSE .)
    PLUS            reduce using rule 21 (expression -> FALSE .)
    MINUS           reduce using rule 21 (expression -> FALSE .)
    TIMES           reduce using rule 21 (expression -> FALSE .)
    DIVIDE          reduce using rule 21 (expression -> FALSE .)
    EXP             reduce using rule 21 (expression -> FALSE .)
    LE              reduce using rule 21 (expression -> FALSE .)
    LT              reduce using rule 21 (expression -> FALSE .)
    GE              reduce using rule 21 (expression -> FALSE .)
    GT              reduce using rule 21 (expression -> FALSE .)
    EQ              reduce using rule 21 (expression -> FALSE .)
    NEQ             reduce using rule 21 (expression -> FALSE .)
    CONCAT          reduce using rule 21 (expression -> FALSE .)
    RPAREN          reduce using rule 21 (expression -> FALSE .)
    COMMA           reduce using rule 21 (expression -> FALSE .)



state 14

    (15) expression -> ifFunction .

    $               reduce using rule 15 (expression -> ifFunction .)
    PLUS            reduce using rule 15 (expression -> ifFunction .)
    MINUS           reduce using rule 15 (expression -> ifFunction .)
    TIMES           reduce using rule 15 (expression -> ifFunction .)
    DIVIDE          reduce using rule 15 (expression -> ifFunction .)
    EXP             reduce using rule 15 (expression -> ifFunction .)
    LE              reduce using rule 15 (expression -> ifFunction .)
    LT              reduce using rule 15 (expression -> ifFunction .)
    GE              reduce using rule 15 (expression -> ifFunction .)
    GT              reduce using rule 15 (expression -> ifFunction .)
    EQ              reduce using rule 15 (expression -> ifFunction .)
    NEQ             reduce using rule 15 (expression -> ifFunction .)
    CONCAT          reduce using rule 15 (expression -> ifFunction .)
    RPAREN          reduce using rule 15 (expression -> ifFunction .)
    COMMA           reduce using rule 15 (expression -> ifFunction .)



state 15

    (44) cell -> column . row
    (49) row -> . INTEGER
    (50) row -> . ABSREF INTEGER

    INTEGER         shift and go to state 25
    ABSREF          shift and go to state 26


    row                            shift and go to state 27

state 16

    (47) column -> ABSREF . COLUMN

    COLUMN          shift and go to state 28



state 17

    (23) expression -> FLOAT .

    $               reduce using rule 23 (expression -> FLOAT .)
    PLUS            reduce using rule 23 (expression -> FLOAT .)
    MINUS           reduce using rule 23 (expression -> FLOAT .)
    TIMES           reduce using rule 23 (expression -> FLOAT .)
    DIVIDE          reduce using rule 23 (expression -> FLOAT .)
    EXP             reduce using rule 23 (expression -> FLOAT .)
    LE              reduce using rule 23 (expression -> FLOAT .)
    LT              reduce using rule 23 (expression -> FLOAT .)
    GE              reduce using rule 23 (expression -> FLOAT .)
    GT              reduce using rule 23 (expression -> FLOAT .)
    EQ              reduce using rule 23 (expression -> FLOAT .)
    NEQ             reduce using rule 23 (expression -> FLOAT .)
    CONCAT          reduce using rule 23 (expression -> FLOAT .)
    RPAREN          reduce using rule 23 (expression -> FLOAT .)
    COMMA           reduce using rule 23 (expression -> FLOAT .)



state 18

    (45) cell -> SHEETNAME . column row
    (46) column -> . COLUMN
    (47) column -> . ABSREF COLUMN

    COLUMN          shift and go to state 6
    ABSREF          shift and go to state 16


    column                         shift and go to state 29

state 19

    (0) S' -> expression .
    (1) expression -> expression . PLUS expression
    (2) expression -> expression . MINUS expression
    (3) expression -> expression . TIMES expression
    (4) expression -> expression . DIVIDE expression
    (5) expression -> expression . EXP expression
    (6) expression -> expression . LE expression
    (7) expression -> expression . LT expression
    (8) expression -> expression . GE expression
    (9) expression -> expression . GT expression
    (10) expression -> expression . EQ expression
    (11) expression -> expression . NEQ expression
    (12) expression -> expression . CONCAT expression

    PLUS            shift and go to state 37
    MINUS           shift and go to state 39
    TIMES           shift and go to state 34
    DIVIDE          shift and go to state 31
    EXP             shift and go to state 38
    LE              shift and go to state 30
    LT              shift and go to state 35
    GE              shift and go to state 33
    GT              shift and go to state 36
    EQ              shift and go to state 32
    NEQ             shift and go to state 41
    CONCAT          shift and go to state 40



state 20

    (28) function -> FUNC LPAREN . arglist RPAREN
    (29) function -> FUNC LPAREN . RPAREN
    (30) arglist -> . arg
    (31) arglist -> . arglist COMMA arg
    (32) arg -> . expression
    (33) arg -> . areareference
    (1) expression -> . expression PLUS expression
    (2) expression -> . expression MINUS expression
    (3) expression -> . expression TIMES expression
    (4) expression -> . expression DIVIDE expression
    (5) expression -> . expression EXP expression
    (6) expression -> . expression LE expression
    (7) expression -> . expression LT expression
    (8) expression -> . expression GE expression
    (9) expression -> . expression GT expression
    (10) expression -> . expression EQ expression
    (11) expression -> . expression NEQ expression
    (12) expression -> . expression CONCAT expression
    (13) expression -> . cell
    (14) expression -> . function
    (15) expression -> . ifFunction
    (16) expression -> . STRING
    (17) expression -> . ERR
    (18) expression -> . MINUS expression
    (19) expression -> . PLUS expression
    (20) expression -> . TRUE
    (21) expression -> . FALSE
    (22) expression -> . INTEGER
    (23) expression -> . FLOAT
    (24) expression -> . LPAREN expression RPAREN
    (34) areareference -> . range
    (35) areareference -> . vector
    (44) cell -> . column row
    (45) cell -> . SHEETNAME column row
    (28) function -> . FUNC LPAREN arglist RPAREN
    (29) function -> . FUNC LPAREN RPAREN
    (25) ifFunction -> . IF LPAREN expression COMMA expression COMMA expression RPAREN
    (26) ifFunction -> . IF LPAREN expression COMMA expression COMMA RPAREN
    (27) ifFunction -> . IF LPAREN expression COMMA expression RPAREN
    (38) range -> . cell RANGEOP cell
    (36) vector -> . colrange
    (37) vector -> . rowrange
    (46) column -> . COLUMN
    (47) column -> . ABSREF COLUMN
    (39) colrange -> . column RANGEOP column
    (40) rowrange -> . INTEGER RANGEOP INTEGER
    (41) rowrange -> . absrow RANGEOP INTEGER
    (42) rowrange -> . INTEGER RANGEOP absrow
    (43) rowrange -> . absrow RANGEOP absrow
    (48) absrow -> . ABSREF INTEGER

    RPAREN          shift and go to state 44
    STRING          shift and go to state 5
    ERR             shift and go to state 2
    MINUS           shift and go to state 4
    PLUS            shift and go to state 8
    TRUE            shift and go to state 3
    FALSE           shift and go to state 13
    INTEGER         shift and go to state 48
    FLOAT           shift and go to state 17
    LPAREN          shift and go to state 11
    SHEETNAME       shift and go to state 18
    FUNC            shift and go to state 1
    IF              shift and go to state 12
    COLUMN          shift and go to state 6
    ABSREF          shift and go to state 51


    function                       shift and go to state 10
    ifFunction                     shift and go to state 14
    column                         shift and go to state 50
    absrow                         shift and go to state 52
    rowrange                       shift and go to state 46
    areareference                  shift and go to state 49
    cell                           shift and go to state 45
    range                          shift and go to state 53
    vector                         shift and go to state 54
    colrange                       shift and go to state 47
    arg                            shift and go to state 42
    arglist                        shift and go to state 43
    expression                     shift and go to state 55

state 21

    (18) expression -> MINUS expression .
    (1) expression -> expression . PLUS expression
    (2) expression -> expression . MINUS expression
    (3) expression -> expression . TIMES expression
    (4) expression -> expression . DIVIDE expression
    (5) expression -> expression . EXP expression
    (6) expression -> expression . LE expression
    (7) expression -> expression . LT expression
    (8) expression -> expression . GE expression
    (9) expression -> expression . GT expression
    (10) expression -> expression . EQ expression
    (11) expression -> expression . NEQ expression
    (12) expression -> expression . CONCAT expression

    $               reduce using rule 18 (expression -> MINUS expression .)
    PLUS            reduce using rule 18 (expression -> MINUS expression .)
    MINUS           reduce using rule 18 (expression -> MINUS expression .)
    TIMES           reduce using rule 18 (expression -> MINUS expression .)
    DIVIDE          reduce using rule 18 (expression -> MINUS expression .)
    EXP             reduce using rule 18 (expression -> MINUS expression .)
    LE              reduce using rule 18 (expression -> MINUS expression .)
    LT              reduce using rule 18 (expression -> MINUS expression .)
    GE              reduce using rule 18 (expression -> MINUS expression .)
    GT              reduce using rule 18 (expression -> MINUS expression .)
    EQ              reduce using rule 18 (expression -> MINUS expression .)
    NEQ             reduce using rule 18 (expression -> MINUS expression .)
    CONCAT          reduce using rule 18 (expression -> MINUS expression .)
    RPAREN          reduce using rule 18 (expression -> MINUS expression .)
    COMMA           reduce using rule 18 (expression -> MINUS expression .)

  ! PLUS            [ shift and go to state 37 ]
  ! MINUS           [ shift and go to state 39 ]
  ! TIMES           [ shift and go to state 34 ]
  ! DIVIDE          [ shift and go to state 31 ]
  ! EXP             [ shift and go to state 38 ]
  ! LE              [ shift and go to state 30 ]
  ! LT              [ shift and go to state 35 ]
  ! GE              [ shift and go to state 33 ]
  ! GT              [ shift and go to state 36 ]
  ! EQ              [ shift and go to state 32 ]
  ! NEQ             [ shift and go to state 41 ]
  ! CONCAT          [ shift and go to state 40 ]


state 22

    (19) expression -> PLUS expression .
    (1) expression -> expression . PLUS expression
    (2) expression -> expression . MINUS expression
    (3) expression -> expression . TIMES expression
    (4) expression -> expression . DIVIDE expression
    (5) expression -> expression . EXP expression
    (6) expression -> expression . LE expression
    (7) expression -> expression . LT expression
    (8) expression -> expression . GE expression
    (9) expression -> expression . GT expression
    (10) expression -> expression . EQ expression
    (11) expression -> expression . NEQ expression
    (12) expression -> expression . CONCAT expression

    $               reduce using rule 19 (expression -> PLUS expression .)
    PLUS            reduce using rule 19 (expression -> PLUS expression .)
    MINUS           reduce using rule 19 (expression -> PLUS expression .)
    TIMES           reduce using rule 19 (expression -> PLUS expression .)
    DIVIDE          reduce using rule 19 (expression -> PLUS expression .)
    EXP             reduce using rule 19 (expression -> PLUS expression .)
    LE              reduce using rule 19 (expression -> PLUS expression .)
    LT              reduce using rule 19 (expression -> PLUS expression .)
    GE              reduce using rule 19 (expression -> PLUS expression .)
    GT              reduce using rule 19 (expression -> PLUS expression .)
    EQ              reduce using rule 19 (expression -> PLUS expression .)
    NEQ             reduce using rule 19 (expression -> PLUS expression .)
    CONCAT          reduce using rule 19 (expression -> PLUS expression .)
    RPAREN          reduce using rule 19 (expression -> PLUS expression .)
    COMMA           reduce using rule 19 (expression -> PLUS expression .)

  ! PLUS            [ shift and go to state 37 ]
  ! MINUS           [ shift and go to state 39 ]
  ! TIMES           [ shift and go to state 34 ]
  ! DIVIDE          [ shift and go to state 31 ]
  ! EXP             [ shift and go to state 38 ]
  ! LE              [ shift and go to state 30 ]
  ! LT              [ shift and go to state 35 ]
  ! GE              [ shift and go to state 33 ]
  ! GT              [ shift and go to state 36 ]
  ! EQ              [ shift and go to state 32 ]
  ! NEQ             [ shift and go to state 41 ]
  ! CONCAT          [ shift and go to state 40 ]


state 23

    (24) expression -> LPAREN expression . RPAREN
    (1) expression -> expression . PLUS expression
    (2) expression -> expression . MINUS expression
    (3) expression -> expression . TIMES expression
    (4) expression -> expression . DIVIDE expression
    (5) expression -> expression . EXP expression
    (6) expression -> expression . LE expression
    (7) expression -> expression . LT expression
    (8) expression -> expression . GE expression
    (9) expression -> expression . GT expression
    (10) expression -> expression . EQ expression
    (11) expression -> expression . NEQ expression
    (12) expression -> expression . CONCAT expression

    RPAREN          shift and go to state 56
    PLUS            shift and go to state 37
    MINUS           shift and go to state 39
    TIMES           shift and go to state 34
    DIVIDE          shift and go to state 31
    EXP             shift and go to state 38
    LE              shift and go to state 30
    LT              shift and go to state 35
    GE              shift and go to state 33
    GT              shift and go to state 36
    EQ              shift and go to state 32
    NEQ             shift and go to state 41
    CONCAT          shift and go to state 40



state 24

    (25) ifFunction -> IF LPAREN . expression COMMA expression COMMA expression RPAREN
    (26) ifFunction -> IF LPAREN . expression COMMA expression COMMA RPAREN
    (27) ifFunction -> IF LPAREN . expression COMMA expression RPAREN
    (1) expression -> . expression PLUS expression
    (2) expression -> . expression MINUS expression
    (3) expression -> . expression TIMES expression
    (4) expression -> . expression DIVIDE expression
    (5) expression -> . expression EXP expression
    (6) expression -> . expression LE expression
    (7) expression -> . expression LT expression
    (8) expression -> . expression GE expression
    (9) expression -> . expression GT expression
    (10) expression -> . expression EQ expression
    (11) expression -> . expression NEQ expression
    (12) expression -> . expression CONCAT expression
    (13) expression -> . cell
    (14) expression -> . function
    (15) expression -> . ifFunction
    (16) expression -> . STRING
    (17) expression -> . ERR
    (18) expression -> . MINUS expression
    (19) expression -> . PLUS expression
    (20) expression -> . TRUE
    (21) expression -> . FALSE
    (22) expression -> . INTEGER
    (23) expression -> . FLOAT
    (24) expression -> . LPAREN expression RPAREN
    (44) cell -> . column row
    (45) cell -> . SHEETNAME column row
    (28) function -> . FUNC LPAREN arglist RPAREN
    (29) function -> . FUNC LPAREN RPAREN
    (25) ifFunction -> . IF LPAREN expression COMMA expression COMMA expression RPAREN
    (26) ifFunction -> . IF LPAREN expression COMMA expression COMMA RPAREN
    (27) ifFunction -> . IF LPAREN expression COMMA expression RPAREN
    (46) column -> . COLUMN
    (47) column -> . ABSREF COLUMN

    STRING          shift and go to state 5
    ERR             shift and go to state 2
    MINUS           shift and go to state 4
    PLUS            shift and go to state 8
    TRUE            shift and go to state 3
    FALSE           shift and go to state 13
    INTEGER         shift and go to state 9
    FLOAT           shift and go to state 17
    LPAREN          shift and go to state 11
    SHEETNAME       shift and go to state 18
    FUNC            shift and go to state 1
    IF              shift and go to state 12
    COLUMN          shift and go to state 6
    ABSREF          shift and go to state 16


    function                       shift and go to state 10
    ifFunction                     shift and go to state 14
    column                         shift and go to state 15
    cell                           shift and go to state 7
    expression                     shift and go to state 57

state 25

    (49) row -> INTEGER .
